--- a/introFrame/index.html
+++ b/introFrame/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Author ShatteredDoll -->
 
 <head>
     <meta charset="UTF-8">
@@ -13,13 +14,13 @@
 </head>
 
 <body>
-    <!-- partial:index.partial.html -->
+    <!-- Author ShatteredDoll -->
     <div id="container">
         <div id="message">
             <a id="animate" class="cursor-pointer linked-animation hidden">Click here to Entry... <span class="cursor">_</span></a>
         </div>
     </div>
-    <!-- partial -->
+    <!-- Author ShatteredDoll -->
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="./script.js"></script>
 
