ajuste de informacion post creditos

--- a/index.html
+++ b/index.html
@@ -26,11 +26,40 @@
                     <br> Are we the voice of reckoning? <br> Will we set them free? <br> Are we special?.<br> <br><br> Author:Lala <br> Creation date:12-07-2024 <br>THANKS FOR READ! ❤️
                 </p>
             </div>
+            <div class="fade-in-content hidden-page" id="showData">
+                <div class="heading">data.exe</div>
+                <div class="inner">
+                    <div class="sign">
+                        <span id="demo"></span>
+                        <span id="contain"></span>
+                        <div id="fiends" class="fiends">
+                            <div class="image-profile">
+                                <img class="profile" src="assets/Fa.png" alt="" width="60" height="60">
+                            </div>
+                            <div class="data">
+                            </div>
+                        </div>
+                        <div id="signature" class="signature">
+                            <span id="signature-text">
+                                YTP Main <br> XATSPACE V20.24 <br>(C)CV-CRYSTAL CORP 2000-2024<br>AUTHOR:LALA<br>*********************************************************************** <br> <br>
+                                <div class="links">
+                                    <img src="assets/flickr.png" alt="" width="10" height="10">
+                                    <span>Pcback samples <a href="https://flic.kr/ps/3UxWPC" target="_blank">HERE</a> </span>
+                        </div>
+                        </span>
+                    </div>
+                    <!-- <div id="special" class="special hidden">
+                        <iframe src="https://xevangelist.github.io/evangelist/LalaFirm.html" width="400" height="auto" frameborder="0"></iframe>
+                    </div> -->
+
+                </div>
+            </div>
         </div>
-        <div class="image-container">
-            <img src="assets/digit.gif" alt="Imagen fija">
-        </div>
-        <audio id="backgroundMusic" src="assets/Digit.mp3"></audio>
+    </div>
+    <div class="image-container">
+        <img src="assets/digit.gif" alt="Imagen fija">
+    </div>
+    <audio id="backgroundMusic" src="assets/Digit.mp3"></audio>
     </div>
     <script src="script.js"></script>
 </body>
