--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
                     <br> I saw in my dreams, welcome to my thoughts: <br> My name is Celeste <br> We're gonna have so much fun here. <br> This is my special place and all my dear friends can feel safe here.
                     <br>
                     <br> In the past, I was a very bad girl.<br> But trust me
-                    <br> I have been barbarically punished for all my wrong doings.<br> And that part of me is dead now. <br> However, I keep a reminder so that not even in my weakest moment will I ever turn into that pathetic slob loser ever again. <br><br>That's
-                    all in the past. <br> <br> Besides, I'm really sorry for what I did. I mean, all of you forgive me, right? <br> <br> <br> Now, I believe in change. We all change, but don't try to benefit from this. <br> Be careful, because "She" will
-                    be waiting, as she doesn't forget. <br> She hates false prophets who proclaim peace and love only to later denigrate their family or friends for their own benefit... <br> to me too... It's disgusting, <br> but is it our responsibility?
-                    <br> Are we the voice of reckoning? <br> Will we set them free? <br> Are we special?.<br> <br><br> Author:Lala <br> Creation date:12-07-2024 <br>THANKS FOR READ! ❤️
+                    <br> I have been barbarically punished for all my wrong doings.<br> And that part of me is dead now.
+                    <br> However, I keep a reminder so that not even in my weakest moment will I ever turn into that pathetic slob loser ever again. <br><br>That's all in the past. <br> <br> Besides, I'm really sorry for what I did. I mean, all of you
+                    forgive me, right? <br> <br> <br> Now, I believe in change. We all change, but don't try to benefit from this.
+                    <br> It's disgusting, <br> but is it our responsibility?
+                    <br> Are we the voice of reckoning? <br> Will we set them free? <br> Are we special?.<br> <br> everyone's too scared to heal<br> They don't give a fuck how they feel<br> And I just don't know how to deal anymore<br> Maybe the damage
+                    is done<br> Maybe the darkness has won<br><br><br> And we were programmed just to suffer <br><br>
+
+                    <br> Author:Lala <br> Creation date:12-07-2024 <br>THANKS FOR READ! ❤️
                 </p>
             </div>
             <div class="fade-in-content hidden-page" id="showData">
@@ -41,10 +45,13 @@
                         </div>
                         <div id="signature" class="signature">
                             <span id="signature-text">
-                                YTP Main <br> XATSPACE V20.24 <br>(C)CV-CRYSTAL CORP 2000-2024<br>AUTHOR:LALA<br>*********************************************************************** <br> <br>
+                                YTP Main <br> XATSPACE V20.24 <br>(C)CV-CRYSTAL CORP
+                                2000-2024<br>AUTHOR:LALA<br>***********************************************************************
+                                <br> <br>
                                 <div class="links">
                                     <img src="assets/flickr.png" alt="" width="10" height="10">
-                                    <span>Pcback samples <a href="https://flic.kr/ps/3UxWPC" target="_blank">HERE</a> </span>
+                                    <span>Pcback samples <a href="https://flic.kr/ps/3UxWPC" target="_blank">HERE</a>
+                                    </span>
                         </div>
                         </span>
                     </div>
@@ -59,7 +66,7 @@
     <div class="image-container">
         <img src="assets/digit.gif" alt="Imagen fija">
     </div>
-    <audio id="backgroundMusic" src="assets/Digit.mp3"></audio>
+    <audio id="backgroundMusic" src="assets/na.mp3"></audio>
     </div>
     <script src="script.js"></script>
 </body>
